--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,8 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-
 monitor_speed = 115200
-
-lib_deps =
-  wemos/WEMOS SHT3x @ ^1.0.0
-  knolleary/PubSubClient @ ^2.8
+lib_deps = 
+	wemos/WEMOS SHT3x @ ^1.0.0
+	knolleary/PubSubClient @ ^2.8
+	tobiasschuerg/ESP8266 Influxdb@^3.9.0
